# ascend

./: .gitignore  CMakeLists.txt  README.md  build_project.bat
.github/workflows/: cmake-single-platform.yml
cmake/: Nuget.cmake  NugetPackages.cmake
doc/ascend-docs/: Ray Tracing notes.md  render-main.md
doc/ascend-docs/.obsidian/: workspace.json
doc/ascend-docs/Raytracing notes/: Raytracing Pipeline.md
src/: CMakeLists.txt
src/ascend/: Camera.cpp  Camera.h  D3D12HelloWorkGraphs.cpp  DirectXRaytracingHelper.h  GBuffer.h  IMGuiHelper.cpp  IMGuiHelper.h  InputCommands.h  Model.cpp  Model.h  RayTracingRHI.cpp  RayTracingRHI.h  Renderer.cpp  Renderer.h  WindowsApplication.cpp  WorkGraphsDXR.cpp  WorkGraphsDXR.h  ascendHelpers.h  main.cpp
src/ascend/DX12/: DDSTextureLoader12.cpp  DDSTextureLoader12.h  DX12.cpp  DX12.h  DX12Profiler.cpp  DX12Profiler.h  DX12_Helpers.cpp  DX12_Helpers.h  GraphicsTypes.cpp  GraphicsTypes.h  PCH.h  SwapChain.cpp  SwapChain.h  Textures.cpp  Textures.h
src/ascend/Shader/: ComputeRaytracing.hlsl  IMGuiPS.hlsl  IMGuiVS.hlsl  Raster.hlsl  RasterPS.hlsl  RasterVS.hlsl  Raytracing.hlsl  RaytracingHlslCompat.h  WorkGraphRaytracing.hlsl
src/ascend/UserInterface/: UserInterface.cpp  UserInterface.h  UserInterfaceModuleInterface.h
src/ascend/UserInterface/Modules/: GraphicsUserInterfaceModule.cpp  GraphicsUserInterfaceModule.h
src/ascend/res/: sponza.mtl
src/ascend/res/textures/: Background_Albedo.dds  Background_Normal.dds  Background_Roughness.dds  ChainTexture_Albedo.dds  ChainTexture_Metallic.dds  ChainTexture_Normal.dds  ChainTexture_Roughness.dds  Lion_Albedo.dds  Lion_Normal.dds  Lion_Roughness.dds  Sponza_Arch_diffuse.dds  Sponza_Arch_normal.dds  Sponza_Arch_roughness.dds  Sponza_Bricks_a_Albedo.dds  Sponza_Bricks_a_Normal.dds  Sponza_Bricks_a_Roughness.dds  Sponza_Ceiling_diffuse.dds  Sponza_Ceiling_normal.dds  Sponza_Ceiling_roughness.dds  Sponza_Column_a_diffuse.dds  Sponza_Column_a_normal.dds  Sponza_Column_a_roughness.dds  Sponza_Column_b_diffuse.dds  Sponza_Column_b_normal.dds  Sponza_Column_b_roughness.dds  Sponza_Column_c_diffuse.dds  Sponza_Column_c_normal.dds  Sponza_Column_c_roughness.dds  Sponza_Curtain_Blue_diffuse.dds  Sponza_Curtain_Green_diffuse.dds  Sponza_Curtain_Green_normal.dds  Sponza_Curtain_Red_diffuse.dds  Sponza_Curtain_metallic.dds  Sponza_Curtain_roughness.dds  Sponza_Details_diffuse.dds  Sponza_Details_metallic.dds  Sponza_Details_normal.dds  Sponza_Details_roughness.dds  Sponza_Fabric_Blue_diffuse.dds  Sponza_Fabric_Green_diffuse.dds  (+29 more)
